# modern-cpp-and-sparse-matrices

./: .editorconfig  .gitignore  Makefile  entangled.toml  meson.build  pyproject.toml  zensical.toml
.entangled/: filedb.json
docs/: benchmark.md  eigen.md  index.md  modern-cpp.md  zensical.md
docs/js/: mathjax.js
src/: benchmark.cpp  concepts.cpp  eigen_dense.cpp  eigen_hello.cpp  hello_world.cpp  least-squares.cpp  least_squares.cpp  matrix_traits.hpp  measurements.hpp  random_values.cpp  solve-dense.cpp  static_assert_semigroup.cpp  test.py
